main.tf
terraform {
  backend "s3" {
    bucket         = "github-actions-terraform-activity"  
    key            = "terraform-tfstate-activity"           
    region         = "us-east-1"                  
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"  # Set AWS region to US East 1 (N. Virginia)
}

# Local variables block for configuration values
locals {
    aws_key = "SCG_AWS_KEY"   # SSH key pair name for EC2 instance access
}

# Security Group to allow HTTP (port 80) and SSH (port 22)
resource "aws_security_group" "allow_http_ssh" {
  name        = "allow_http_ssh"
  description = "Allow HTTP and SSH inbound traffic"

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow SSH from anywhere
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow HTTP from anywhere
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  # Allow all outbound traffic
  }
}

# EC2 instance resource definition
resource "aws_instance" "my_server" {
   ami           = data.aws_ami.amazonlinux.id  # Use the AMI ID from the data source
   instance_type = var.instance_type            # Use the instance type from variables
   key_name      = "${local.aws_key}"          # Specify the SSH key pair name
  
   # Security group to allow HTTP and SSH
   vpc_security_group_ids = [aws_security_group.allow_http_ssh.id]

   # This will run the WordPress install script automatically
   user_data = file("wp_install.sh") 

   # Add tags to the EC2 instance for identification
   tags = {
     Name = "my ec2"
   }                  
}
